Inserte las imágenes sobre mi vida
Inserte algunas de las imágenes que mi pagina tendrá como contenido y las ordene junto con el texto

--- a/proyectoFinal.html
+++ b/proyectoFinal.html
@@ -1,6 +1,71 @@
 <html>
-<head><title>Pagina Web</title></head>
-<body>
+<head ><title>Mi vida</title></head>
 
+<body bgcolor="#D8D8D8" >
+<font face="Arial">
+<p>Hola mi nombre es Oswaldo Guevara Sánchez y nací el 7 de junio de 1996 en Los Mochis, Sinaloa.</p>
+<p><img src="./img/yo.jpg" width="221" height="414" /></p>
+
+<p>Mi mamá se llama Noemí Sánchez y mi papá Oscar Ramón Guevara</p>
+<p><img src="./img/papas.png" width="401" height="399" /> </p>
+
+<p>Soy el más grande de mis hermanos, mi hermano Oscar Darío de 18 y mis dos hermanas gemelas</p>
+<p>Marisol y Maribel de 12 años, apreciamos mucho a nuestra abuela Bertha madre de mi papá</p>
+<p>
+<img src="./img/familia.jpg"/>
+</p>
+<p>Cuando era un niño me hacían fiestas de cumpleaños casi siempre e invitaban a mi familia y mis pasteles</p>
+<p>eran de mis caricaturas favoritas como DragonBall y Pokemon también decían mis papas que era muy llorón</p>
+<p><img src="./img/1año.jpg" width="300" height="250" />
+<img src="./img/5años.jpg" width="200" height="250" />
+<img src="./img/4años.jpg" width="200" height="250"/>
+<img src="./img/lloron.jpg" width="320" height="250">
+ </p>
+
+<p>Estudie el kinder,primaria,secundaria y preparatoria en Los Mochis y en esas generaciones de estudio conocí a muchos amigos con los cuales</p>
+<p>aún tengo comunicación y amistad, a veces salimos para vernos y divertirnos</p>
+<img src="./img/amigosPrepa.jpg" width="250" height="300"/>
+<img src="./img/amigosBar.jpg" width="420" height="300"/>
+<img src="./img/prepa.jpg" width="450" height="300"/>
+
+<p>Uno de estos viejos amigos mi mejor amiga se llama Edith y la conozco desde la preparatoria</p>
+<p>y con ella me divierto mucho y hacemos muchas cosas divertidas</p>
+<p><img src="./img/edithAmiga.jpg" width="480" height="400"/>
+<img src="./img/gabyAmiga.jpg" width="300" height="400"/>
+<img src="./img/edithGaby.jpeg" width="350" height="400"/>
+</p>
+
+<p>Tengo algunos gustos y pasiones como por ejemplo mi color favorito es el azul, me gusta leer, hacer ejercicio, me gustan los animales</p>
+<p>y me encantan los animales marinos, mi segunda opción que tenía para mis estudios era Biología Marina</p>
+<p> y uno de mis lugares favoritos son las playas</p>
+<p>
+<img src="./img/biologia.jpg" width="320" height="400"/>
+<img src="./img/animales.jpg" width="380" height="400"/>
+<img src="./img/gym.jpg" width="300" height="400"/>
+<img src="./img/playa.jpg" width="290" height="400"/>
+</p>
+
+<p>Un dato curioso es que me encantan los tatuajes y tengo planeado ponerme muchos</p>
+<p>en este momento no me he hecho ninguno pero pienso en unos años más hacerlo</p>
+<p>
+<img src="./img/tattoos.jpg" width="300" height="400"/>
+</p>
+
+<p>En este momento tengo 20 años y estudio Ingeniería Informática en</p>
+<p>el Instituto Tecnológico de Los Mochis y me gusta mucho esta carrera, y tengo</p>
+<p>buenos maestros y compañeros</p>
+<p>
+<img src="./img/amigosTec.jpeg" width="700" height="400"/>
+</p>
+
+<p>mi plan para mi futuro es convertirme en un profesionista exitoso, una persona humilde, educada</p>
+<p>con muchos valores, capaz de poder ayudar a las personas a su alrededor, ser siempre la persona divertida que soy,</p>
+<p>ser el orgullo de mi familia y ser feliz con lo que tenga de la vida y me de Dios..</p>
+<p>
+<img src="./img/yoFormal.jpg" width="750" height="500"/>
+</p>
+
+
+</font>
 </body>
 </html>
