--- a/obsesiones.html
+++ b/obsesiones.html
@@ -1,11 +1,12 @@
+
 <html>
-<head><title>Bienvenido a mi vida</title></head>
+<head><title>Bienvenido a mi vida</title><link rel="icon" type="miniIcono.png" href="./img/miniIcono.png" /></head>
    <body><div>
-       <img src="./img/logo.png" width="400" height="90"/>
-       <img src="./img/panelRedesSociales.png" width="300" height="90"/>
-       <img src="./img/panelUbicacion.png" width="300" height="90"/>
-        <img src="./img/panelTelefono.png" width="300" height="90"/>
+      <a href="./menu.html"><img src="./img/logo.png" /></a>
+       <a href="./redesSociales.html"><img src="./img/panelRedesSociales.png" /></a>
+       <a href="./ubicacion.html"><img src="./img/panelUbicacion.png" /></a>
+       <a href="./telefono.html"><img src="./img/panelTelefono.png" /></a>
        </div>
-       
+     
        </body>
 </html>
