Agregar contenido a la pagina
Le metí texto como contenido, y una imagen que simula ser un botón que te permite regresarte a la pagina anterior

--- a/telefono.html
+++ b/telefono.html
@@ -1,7 +1,17 @@
+
 <html>
-<head><title>Bienvenido a mi vida</title></head>
-   <body>
- mi celular
- 
+<head><title>Bienvenido a mi vida</title><link rel="icon" type="miniIcono.png" href="./img/miniIcono.png" /></head>
+     <body><div>
+      <a href="./menu.html"><img src="./img/logo.png" /></a>
+       <a href="./redesSociales.html"><img src="./img/panelRedesSociales.png" /></a>
+       <a href="./ubicacion.html"><img src="./img/panelUbicacion.png" /></a>
+       <a href="./telefono.html"><img src="./img/panelTelefono.png" /></a>
+       </div>
+     
+     
+       <h2>Celular:</h2>
+       <h1>66-81-85-71-24</h1>
+       <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+       <p><a href="./menu.html"><img src="./img/botonRegresar.png"/></a></p>
        </body>
 </html>
