Creacion de contenido
Le inserte texto, y una imagen que al dar click te dirige a un sitio web, en una pestaña nueva, y una imagen que simula ser un boton que regresa a la pagina anterior

--- a/ubicacion.html
+++ b/ubicacion.html
@@ -1,8 +1,17 @@
+
 <html>
-<head><title>Bienvenido a mi vida</title></head>
-   <body>
- DOMICILIO
-          <a href="https://www.google.com.mx/maps/place/San+Nicol%C3%A1s+de+Los+Garza+2065,+Terra+Nova,+81270+Los+Mochis,+Sin./@25.7721442,-109.0083622,17z/data=!3m1!4b1!4m5!3m4!1s0x86ba258c49cf62a1:0x6b511899403e0f3b!8m2!3d25.7721442!4d-109.0061735">MAPA IMAGEN</a>
+<head><title>Bienvenido a mi vida</title><link rel="icon" type="miniIcono.png" href="./img/miniIcono.png" /></head>
+   <body><div>
+      <a href="./menu.html"><img src="./img/logo.png" /></a>
+       <a href="./redesSociales.html"><img src="./img/panelRedesSociales.png" /></a>
+       <a href="./ubicacion.html"><img src="./img/panelUbicacion.png" /></a>
+       <a href="./telefono.html"><img src="./img/panelTelefono.png" /></a>
+       </div>
+     
+ <h1>Haz click en el icono</h1>
+       <p><a href="https://www.google.com.mx/maps/place/San+Nicol%C3%A1s+de+Los+Garza+2065,+Terra+Nova,+81270+Los+Mochis,+Sin./@25.7721442,-109.0083622,17z/data=!3m1!4b1!4m5!3m4!1s0x86ba258c49cf62a1:0x6b511899403e0f3b!8m2!3d25.7721442!4d-109.0061735" target="_blank"><img src="./img/mapa.png"/></a></p>
        
+       <br><br><br><br><br><br>
+       <p><a href="./menu.html"><img src="./img/botonRegresar.png"/></a></p>
        </body>
 </html>
