Agregar un registro mas a la tabla
Se le agregó un registro mas a la tabla que tenia para organizar las imagenes ya que hice dos imagenes mas llamadas Historias y Amistades

--- a/menu.html
+++ b/menu.html
@@ -16,7 +16,7 @@
   <tr>
     <td><a href="./familia.html"><img src="./img/botonFamilia.png" /></a></td>
       
-    <td rowspan="5"><img src="./img/yoPrincipal.png"   alt="Oswaldo Guevara vestido formal"></td>
+    <td rowspan="5"><img src="./img/principal.png"   alt="Oswaldo Guevara vestido formal"></td>
       
     <td><a href="./salud.html"><img src="./img/botonSalud.png" /></a></td>
   </tr>
@@ -31,6 +31,10 @@
   <tr>
     <td><a href="./obsesiones.html"><img src="./img/botonObsesiones.png" /></a></td>
     <td><a href="./diversion.html"><img src="./img/botonDiversiones.png" /></a></td>
+  </tr>
+      <tr>
+    <td><a href="./historias.html"><img src="./img/botonHistorias.png" /></a></td>
+    <td><a href="./diversion.html"><img src="./img/botonAmistades.png" /></a></td>
   </tr>
 </table>
 </body>
