Se le agrego mas contenido
Se le cambio la fuente a el texto y se le agregaron fotos y párrafos de texto alineados al centro con la marca DIV

--- a/adolescencia.html
+++ b/adolescencia.html
@@ -1,12 +1,26 @@
-
 <html>
 <head><title>Bienvenido a mi vida</title><link rel="icon" type="miniIcono.png" href="./img/miniIcono.png" /></head>
-   <body><div>
+   <body><FONT FACE="arial"><div>
       <a href="./menu.html"><img src="./img/logo.png" /></a>
        <a href="./redesSociales.html"><img src="./img/panelRedesSociales.png" /></a>
        <a href="./ubicacion.html"><img src="./img/panelUbicacion.png" /></a>
        <a href="./telefono.html"><img src="./img/panelTelefono.png" /></a>
        </div>
-     
+       <div align=center>
+       <img src="./img/adolescencia7.jpg" alt="Viendo un partido en el aula de la secundaria"/>
+           <p>En la secundaria comencé a desarróllame físicamente, crecí mas de altura, baje más peso, me salieron muchos barros, me cambio la voz, pero además cambie psicológicamente también, al igual que todos mis compañeros, ya empezaba a querer salir y tomar decisiones por mí mismo y hacerme responsable de las consecuencias que tuviera, me gustaba divertirme mucho con mis compañeros, me gustaba llevármela en fiestas o visitando a cualquiera, fue una etapa llena de cambios y de adaptación.</p>
+           <br>
+           <img src="./img/adolescencia2.jpg"/><img src="./img/adolescencia3.jpg"/>
+           <p>En la mayoría de mi adolescencia me la pasaba en xv años con mis amigos, algunos eran de quinceañeras que ni conocíamos y entrabamos de colados, nos divertíamos muchísimo.</p>
+           <br>
+           <img src="./img/adolescencia5.jpg"/><img src="./img/adolescencia6.jpg"/>
+           <p>En preparatoria ya había cambiado un poco más físicamente, ya no estaba tan delgado, había embarnecido más, aún seguía con mi misma actitud de antes, aun me gustaba salir con mis amigos aunque ya no lo hacía tan seguido como antes.</p>
+           <br>
+           <img src="./img/adolescencia4.jpg"/>
+           <p>En mi último año de preparatoria ya casi no tuve cambios físicos pero si mentalmente, yo ya era más responsable, quería tomar mis propias decisiones y enfrentar las consecuencias, también ya no tenía demasiados amigos, solo me quedaba con algunos pocos porque empezaba a valorar a las personas que de verdad me apreciaban a mí.</p>
+       </div>
+      <p><a href="./menu.html"><img src="./img/botonRegresar.png"/></a></p>
+       
+        </FONT>
        </body>
 </html>
