Se corrige un error
Se cambio una liga que estaba mal en la imagen de Amistades ya que me dirigía a la pagina de Diversiones

--- a/menu.html
+++ b/menu.html
@@ -34,7 +34,7 @@
   </tr>
       <tr>
     <td><a href="./historias.html"><img src="./img/botonHistorias.png" /></a></td>
-    <td><a href="./diversion.html"><img src="./img/botonAmistades.png" /></a></td>
+    <td><a href="./amistades.html"><img src="./img/botonAmistades.png" /></a></td>
   </tr>
 </table>
 </body>
