Cambio de los caracteres
Se cambiaron los caracteres por entities

--- a/adolescencia.html
+++ b/adolescencia.html
@@ -8,16 +8,16 @@
        </div>
        <div align=center>
        <img src="./img/adolescencia7.jpg" alt="Viendo un partido en el aula de la secundaria"/>
-           <p>En la secundaria comencé a desarróllame físicamente, crecí mas de altura, baje más peso, me salieron muchos barros, me cambio la voz, pero además cambie psicológicamente también, al igual que todos mis compañeros, ya empezaba a querer salir y tomar decisiones por mí mismo y hacerme responsable de las consecuencias que tuviera, me gustaba divertirme mucho con mis compañeros, me gustaba llevármela en fiestas o visitando a cualquiera, fue una etapa llena de cambios y de adaptación.</p>
+           <p>En la secundaria comenc&eacute; a desarr&oacute;llame f&iacute;sicamente, crec&iacute; mas de altura, baje m&aacute;s peso, me salieron muchos barros, me cambio la voz, pero adem&aacute;s cambie psicol&oacute;gicamente tambi&eacute;n, al igual que todos mis compa&ntilde;eros, ya empezaba a querer salir y tomar decisiones por m&iacute; mismo y hacerme responsable de las consecuencias que tuviera, me gustaba divertirme mucho con mis compa&ntilde;eros, me gustaba llev&aacute;rmela en fiestas o visitando a cualquiera, fue una etapa llena de cambios y de adaptaci&oacute;n.</p>
            <br>
            <img src="./img/adolescencia2.jpg"/><img src="./img/adolescencia3.jpg"/>
-           <p>En la mayoría de mi adolescencia me la pasaba en xv años con mis amigos, algunos eran de quinceañeras que ni conocíamos y entrabamos de colados, nos divertíamos muchísimo.</p>
+           <p>En la mayor&iacute;a de mi adolescencia me la pasaba en xv a&ntilde;os con mis amigos, algunos eran de quincea&ntilde;eras que ni conoc&iacute;amos y entrabamos de colados, nos divert&iacute;amos much&iacute;simo.</p>
            <br>
            <img src="./img/adolescencia5.jpg"/><img src="./img/adolescencia6.jpg"/>
-           <p>En preparatoria ya había cambiado un poco más físicamente, ya no estaba tan delgado, había embarnecido más, aún seguía con mi misma actitud de antes, aun me gustaba salir con mis amigos aunque ya no lo hacía tan seguido como antes.</p>
+           <p>En preparatoria ya hab&iacute;a cambiado un poco m&aacute;s f&iacute;sicamente, ya no estaba tan delgado, hab&iacute;a embarnecido m&aacute;s, a&uacute;n segu&iacute;a con mi misma actitud de antes, aun me gustaba salir con mis amigos aunque ya no lo hac&iacute;a tan seguido como antes.</p>
            <br>
            <img src="./img/adolescencia4.jpg"/>
-           <p>En mi último año de preparatoria ya casi no tuve cambios físicos pero si mentalmente, yo ya era más responsable, quería tomar mis propias decisiones y enfrentar las consecuencias, también ya no tenía demasiados amigos, solo me quedaba con algunos pocos porque empezaba a valorar a las personas que de verdad me apreciaban a mí.</p>
+           <p>En mi &uacute;ltimo a&ntilde;o de preparatoria ya casi no tuve cambios f&iacute;sicos pero si mentalmente, yo ya era m&aacute;s responsable, quer&iacute;a tomar mis propias decisiones y enfrentar las consecuencias, tambi&eacute;n ya no ten&iacute;a demasiados amigos, solo me quedaba con algunos pocos porque empezaba a valorar a las personas que de verdad me apreciaban a m&iacute;.</p>
        </div>
       <p><a href="./menu.html"><img src="./img/botonRegresar.png"/></a></p>
        
