Se cambiaron caracteres
Se cambiaron los caracteres por entities y correccion al final de las lineas

--- a/amistades.html
+++ b/amistades.html
@@ -12,29 +12,25 @@
            <br><br><br>
            <h3><p>Los Andys</p></h3>
            <img src="./img/amistades14.jpg"/><img src="./img/amistades15.jpg"/><img src="./img/amistades18.PNG"/><img src="./img/historias17.jpg"/>
-           <p>El nombre surgió por una broma que hicimos un día que nos hicimos pasar por juguetes de la película de Toy Story y cuando gritamos ahí viene Andy nos desmayamos, luego hicimos un grupo en Facebook y Whatsapp y de ahí quedó el nombre. A ellos los fui conociendo en fiestas y amigos en común, la mayoría son menores que yo en edad, y con ellos he pasado muchos momentos de diversión antes éramos muchos ahora somos unos cuantos los que aún nos vemos, desde el 2014 los conozco y hemos salido a muchas fiestas, y hemos hecho muchas reuniones, también hemos ido a conciertos en la ciudad, a patinar y jugar billar, entre muchas cosas más.</p>
+           <p>El nombre surgi&oacute; por una broma que hicimos un d&iacute;a que nos hicimos pasar por juguetes de la pel&iacute;cula de Toy Story y cuando gritamos ah&iacute; viene Andy nos desmayamos, luego hicimos un grupo en Facebook y Whatsapp y de ah&iacute; qued&oacute; el nombre. A ellos los fui conociendo en fiestas y amigos en com&uacute;n, la mayor&iacute;a son menores que yo en edad, y con ellos he pasado muchos momentos de diversi&oacute;n antes &eacute;ramos muchos ahora somos unos cuantos los que a&uacute;n nos vemos, desde el 2014 los conozco y hemos salido a muchas fiestas, y hemos hecho muchas reuniones, tambi&eacute;n hemos ido a conciertos en la ciudad, a patinar y jugar billar, entre muchas cosas m&aacute;s.</p>
            <br>
            <h3><p>Los de Preparatoria</p></h3>
            <img src="./img/amistades8.jpg"/><img src="./img/amistades16.jpg"/><img src="./img/amistades13.jpg"/>
-           <p>Con ellos aún me junto, salimos a cenar a restobares, y nos vemos en la universidad, otros estudian en otra escuela.</p>
+           <p>Con ellos a&uacute;n me junto, salimos a cenar a restobares, y nos vemos en la universidad, otros estudian en otra escuela.</p>
             <br>
            <h3><p>Los de Universidad</p></h3>
            <img src="./img/amistades12.jpg"/><img src="./img/amistades17.jpg"/>
-           <p>Con ellos me la paso muy divertido en la escuela y hacemos que pase volando el tiempo en la escuela, hablamos puras cosas sin sentido, y estamos muy locos. También nos ayudamos entre todos.</p>
+           <p>Con ellos me la paso muy divertido en la escuela y hacemos que pase volando el tiempo en la escuela, hablamos puras cosas sin sentido, y estamos muy locos. Tambi&eacute;n nos ayudamos entre todos.</p>
            <br>
            <h3><p>Los de servicio militar</p></h3>
            <img src="./img/amistades2.jpg"/>
-           <p>Con ellos he salido pocas veces pero me llevo muy bien con ellos, los conocí mientras hacíamos el Servicio Militar, y salimos casi siempre a jugar billar. Unos van en el Tecnológico con migo y otro estudia en UANEG</p>
+           <p>Con ellos he salido pocas veces pero me llevo muy bien con ellos, los conoc&iacute; mientras hac&iacute;amos el Servicio Militar, y salimos casi siempre a jugar billar. Unos van en el Tecnol&oacute;gico con migo y otro estudia en UANEG</p>
                <br>
            <h3><p>Mejor amiga</p></h3>
            <img src="./img/amistades1.jpg"/><img src="./img/amistades10.jpg"/><img src="./img/amistades11.jpg"/>
-           <p>A Edith Gabriela la conozco desde la preparatoria y me lleve mucho con ella, hablamos puras cosas sin sentido, nos gusta ofendernos entre nosotros e insultarnos, pero cuando ocupamos la ayuda del otro ahí estamos, es a la persona que más confianza que tengo, y valoro mucho su amistad, es muy sigue curas,  y espero tener su amistad durante mucho tiempo más.</p>
+           <p>A Edith Gabriela la conozco desde la preparatoria y me lleve mucho con ella, hablamos puras cosas sin sentido, nos gusta ofendernos entre nosotros e insultarnos, pero cuando ocupamos la ayuda del otro ah&iacute; estamos, es a la persona que m&aacute;s confianza que tengo, y valoro mucho su amistad, es muy sigue curas,  y espero tener su amistad durante mucho tiempo m&aacute;s.</p>
        </div>
   <p><a href="./menu.html"><img src="./img/botonRegresar.png"/></a></p>
         </FONT>
        </body>
 </html>
-           <br>
-           <p></p>
-           <img src=""/>
-           <p></p>
