Se inserto contenido
Se inserto contenido con el mismo formato y se cambiaron las entities

--- a/diversion.html
+++ b/diversion.html
@@ -1,12 +1,33 @@
-
 <html>
 <head><title>Bienvenido a mi vida</title><link rel="icon" type="miniIcono.png" href="./img/miniIcono.png" /></head>
-   <body><div>
+   <body><FONT FACE="arial"><div>
       <a href="./menu.html"><img src="./img/logo.png" /></a>
        <a href="./redesSociales.html"><img src="./img/panelRedesSociales.png" /></a>
        <a href="./ubicacion.html"><img src="./img/panelUbicacion.png" /></a>
        <a href="./telefono.html"><img src="./img/panelTelefono.png" /></a>
        </div>
-     
+       <div align=center>
+           <br>
+           <img src="./img/diversiones4.jpg"/>
+           <p>Me divierte hacer ejercicio, sonara loco porque sudas, duele y te cansas, pero es algo que tienes que soportar, pero yo lo veo divertido porque estar en un lugar con personas que le dedican tiempo para ellos mismos, con pura actitud positiva, con buena m&uacute;sica, y donde haces amistades, eso me divierte hacer.</p>
+           <br>
+           <img src="./img/diversiones1.png"/>
+           <p>Me divierte leer cuando tengo tiempo, casi no leo seguido, solo en vacaciones y cuando empiezo un libro me emociono tanto que me lo termino muy r&aacute;pido, estos son los libros que ya he le&iacute;do. </p>
+           <br>
+           <img src="./img/diversiones3.jpg"/>
+           <p>Me gusta ver pel&iacute;culas, ya sea en mi casa o en el cine.</p>
+           <br>
+           <img src="./img/diversiones5.jpg"/>
+           <p>Me divierte escuchar mi m&uacute;sica favorita, siempre me pone de buen humor y me relaja bastante.</p>
+              <br>
+           <img src="./img/diversiones6.PNG"/>
+           <p>Me gusta ver momos en las redes sociales, eso sí que me divierte mucho y hasta me hace reir como loco.</p>
+             <br>
+           <img src="./img/diversiones7.PNG"/>
+           <p>Me gusta jugar con mis compa&ntilde;eros o amigos juegos como el UNO.</p>
+       </div>
+      <p><a href="./menu.html"><img src="./img/botonRegresar.png"/></a></p>
+        </FONT>
        </body>
 </html>
+
