Se corrigio error
Se corrigió error en las imágenes y se cambiaron las entities

--- a/fisico.html
+++ b/fisico.html
@@ -11,10 +11,10 @@
        <p>Color de ojos: Negros</p>
        <p>Cabello: Negro y lacio</p>
        <p>Biotipo: Mesomorfo</p>
-       
-       <img src="./img/fisico2.jpeg" alt="Foto del primer dia de gym" />
+       <div align=center><img src="./img/fisico2.jpeg" alt="Foto del primer dia de gym" />
        <img src="./img/fisico1.jpg" alt="Foto del mes 8 en el gym" />
-       <p>&#160;&#160;&#160;&#160;&#160;Foto del primer dia de gym Marzo 2016 &#160;&#160;&#160;&#160;&#160;&#160;&#160;Foto del mes 8 en el gym Noviembre 2016</p>
+       <p>&#160;&#160;&#160;&#160;Foto del primer dia de gym Marzo 2016 &#160;&#160;&#160;&#160;&#160;&#160;&#160;Foto del mes 8 en el gym Noviembre 2016</p></div>
+      
        <p><a href="./menu.html"><img src="./img/botonRegresar.png" alt="Boton de regresar"/></a></p>
        </FONT>
        </body>
