Se cambiaron caracteres
Se usaron entities

--- a/infancia.html
+++ b/infancia.html
@@ -9,18 +9,18 @@
        <div align=center>
            
            <p><img src="./img/infancia11.jpg"/></p>
-           <p>Fotografía de cuando me llevaron a registro civil.</p>
+           <p>Fotograf&iacute;a de cuando me llevaron a registro civil. Fui registrado como Oswaldo Guevara S&aacute;nchez y nac&iacute; el 7 de Junio en Los Mochis, Sinaloa, M&eacute;xico.</p>
            <p><img src="./img/infancia1.jpg"/><img src="./img/infancia3.jpg"/><img src="./img/infancia4.jpg"/><img src="./img/infancia6.jpg"/></p>
-           <p>Fotografías de mis primeras fiestas de cumpleaños.</p>
-           <p>Desde chiquito me hacían fiesta de cumpleaños, siempre con un gran pastel para toda la familia invitada, siempre era de mis personajes favoritos, de chiquito me gustaba mucho DragonBall Z, Pokemon,Digimon, y Power Rangers.</p>
+           <p>Fotograf&iacute;as de mis primeras fiestas de cumplea&ntilde;os.</p>
+           <p>Desde chiquito me hac&iacute;an fiesta de cumplea&ntilde;os, siempre con un gran pastel para toda la familia invitada, siempre era de mis personajes favoritos, de chiquito me gustaba mucho DragonBall Z, Pokemon,Digimon, y Power Rangers.</p>
            
            <br><br>
            <p> <img src="./img/infancia2.jpg"/><img src="./img/infancia5.jpg"/><img src="./img/infancia7.jpg"/><img src="./img/infancia8.jpg"/></p>
-      <p>Mi padre tenía una cámara fotográfica profesional cuando yo estaba chico, y le gustaba tomarme muchas fotos en cualquier momento, incluso en momentos vergonzosos. Mis papas dicen que cuando estaba chiquito era muy llorón por todo, y aún recuerdo cuando mi papa me tomaba fotografías con su cámara.</p>
+      <p>Mi padre ten&iacute;a una c&aacute;mara fotogr&aacute;fica profesional cuando yo estaba chico, y le gustaba tomarme muchas fotos en cualquier momento, incluso en momentos vergonzosos. Mis papas dicen que cuando estaba chiquito era muy llor&oacute;n por todo, y a&uacute;n recuerdo cuando mi papa me tomaba fotograf&iacute;as con su c&aacute;mara.</p>
        <p><img src="./img/infancia9.jpg"/></p>
-           <p>Me bautizaron en la iglesia católica al año de vida en una iglesia de Mocorito, mis padrinos fueron Rene y Carmen.</p>
+           <p>Me bautizaron en la iglesia cat&oacute;lica al a&ntilde;o de vida en una iglesia de Mocorito, mis padrinos fueron Rene y Carmen.</p>
            <p><img src="./img/infancia10.jpg"/></p>
-           <p>Esta foto es en un bailable que participe en la primaria sobre un baile llamado Danza del viejito. Desde el kínder participe en bailables escolares.</p>
+           <p>Esta foto es en un bailable que participe en la primaria sobre un baile llamado Danza del viejito. Desde el k&iacute;nder participe en bailables escolares</p>
        </div>
       <p><a href="./menu.html"><img src="./img/botonRegresar.png"/></a></p>
         </FONT>
