Se cambiaron a entities
Se cambiaron caracteres por entities

--- a/kinder.html
+++ b/kinder.html
@@ -9,9 +9,9 @@
        <div align="center"><h1>Kinder</h1>
        <img src="./img/estudios2.jpg" alt="Foto de mi graducion del kinder"/>
            
-        <p>A los 5 años entre al Kinder Bamby ubicado en el fraccionamiento San Fernando y aún sigue ahí, fue una etapa muy bonita, porque ahí hice amigos que aún les hablo y tengo contacto con ellos, con algunos seguí estudiando primaria y secundaria incluso preparatoria. </p>
+        <p>A los 5 a&ntilde;os entre al Kinder Bamby ubicado en el fraccionamiento San Fernando y a&uacute;n sigue ah&iacute;, fue una etapa muy bonita, porque ah&iacute; hice amigos que a&uacute;n les hablo y tengo contacto con ellos, con algunos segu&iacute; estudiando primaria y secundaria incluso preparatoria. </p>
            <br>
-           <p>En esa época estaba muy obeso porque me la pasaba comiendo mucha comida chatarra, siempre que me llevaban pasábamos por un abarrotes donde me compraban muchas galletas, pan, y jugos o yogurts. Ahí practicaba inglés y Karate como materias, además esa escuela organizaba buenas fiestas muy elegantes.</p>
+           <p>En esa &eacute;poca estaba muy obeso porque me la pasaba comiendo mucha comida chatarra, siempre que me llevaban pas&aacute;bamos por un abarrotes donde me compraban muchas galletas, pan, y jugos o yogurts. Ah&iacute; practicaba ingl&eacute;s y Karate como materias, adem&aacute;s esa escuela organizaba buenas fiestas muy elegantes.</p>
            
        </div>
   <p><a href="./estudios.html"><img src="./img/botonRegresar.png"/></a></p>
