Cambio de caracteres
Se usaron entities

--- a/megusta.html
+++ b/megusta.html
@@ -9,7 +9,7 @@
        <div align="center"><h1>Me gusta</h1>
            <br>
        <img src="./img/gustos1.jpg" alt="Foto mia patinando en hielo"/><img src="./img/gustos20.PNG" alt="Foto intentando tocar el piano"/><img src="./img/gustos17.jpg" border="1"/>
-       <p>Me gusta aprender cosas nuevas, como por ejemplo patinar, o cosas que me ayuden para mi profesionalismo laboral, en estos momentos quisiera aprender algún tipo de combate como kick-boxing y también aprender a tocar el piano.</p>
+       <p>Me gusta aprender cosas nuevas, como por ejemplo patinar, o cosas que me ayuden para mi profesionalismo laboral, en estos momentos quisiera aprender alg&uacute;n tipo de combate como kick-boxing y tambi&eacute;n aprender a tocar el piano.</p>
            <br>
        <img src="./img/gustos2.jpg" alt="Foto con el perro de una tia"/>
            <p>Me gustan los perros, mi raza favorita son los pitbull blue.</p>
@@ -19,13 +19,13 @@
        
            <br>
        <img src="./img/gustos4.jpg" alt="Foto de torta ahogada"/>
-       <p>Me gusta comer mucho toda aquella comida que lleve harina, como por ejemplo pizza, hamburguesas, pasteles, pays, galletas, pan, y también las tortas ahogadas que hace mi abuela.</p>
+       <p>Me gusta comer mucho toda aquella comida que lleve harina, como por ejemplo pizza, hamburguesas, pasteles, pays, galletas, pan, y tambi&eacute;n las tortas ahogadas que hace mi abuela.</p>
        <br>
        <img src="./img/gustos6.jpg" alt="Foto mia en un juego mecanico llamado martillo"/>
-       <p>Me gustan los juegos mecánicos porque se siente un poco de adrenalina al estar en ellos, me gusta sentir la adrenalina subiéndome a ellos o practicando cosas extremas, una de las cosas que quiero hacer es lanzarme en paracaídas o saltar en bungee desde muy alto.</p>
+       <p>Me gustan los juegos mec&aacute;nicos porque se siente un poco de adrenalina al estar en ellos, me gusta sentir la adrenalina subi&eacute;ndome a ellos o practicando cosas extremas, una de las cosas que quiero hacer es lanzarme en paraca&iacute;das o saltar en bungee desde muy alto.</p>
        <br>
        <img src="./img/gustos8.jpg"/><img src="./img/gustos9.jpg"/>
-       <p>Me gusta ir a la playa y ver el mar, a veces también meterme a nadar, aunque casi no voy tan seguido como quisiera</p>
+       <p>Me gusta ir a la playa y ver el mar, a veces tambi&eacute;n meterme a nadar, aunque casi no voy tan seguido como quisiera.</p>
        <br>
        <img src="./img/gustos16.jpg"/>
        <p>Me gustan los tatuajes y quisiera ponerme muchos.</p>
@@ -34,22 +34,22 @@
        <p>Me gusta andar en bicicleta.</p>
        <br>
        <img src="./img/gustos14.jpg" />
-       <p>Me gusta ver películas de género comedia, o ciencia ficción. </p>
+       <p>Me gusta ver pel&iacute;culas de g&eacute;nero comedia, o ciencia ficci&oacute;n. </p>
        <br>
        <img src="./img/gustos7.gif"/>
-       <p>Mi película favorita que me gusta ver seguido es Suicide Squad.</p>
+       <p>Mi pel&iacute;cula favorita que me gusta ver seguido es Suicide Squad.</p>
        <br>
        <img src="./img/gustos19.jpg"/>
        <p>Mi grupo musical favorito es Twenty one Pilots.</p>
        <br>
        <img src="./img/gustos15.png"/>
-       <p>Mi canción favorita es Dont let me down de Chainsmokers.</p>
+       <p>Mi canci&oacute;n favorita es Dont let me down de Chainsmokers.</p>
        <br>
        <img src="./img/gustos12.jpg"/>
-       <p>Me gustan mucho este tipo de chamarras, yo tengo como 4 de este estilo.</p>
+       <p>Me gustan mucho este tipo de chamarras, yo tengo 4 de este estilo.</p>
        <br>
        <img src="./img/gustos13.jpg"/><img src="./img/gustos18.jpg"/>
-       <p>Me hubiera gustado también estudiar Biología marina, u odontología.</p>
+       <p>Me hubiera gustado tambi&eacute;n estudiar Biolog&iacute;a marina, u odontolog&iacute;a.</p>
        </div>
   <p><a href="./gustos.html"><img src="./img/botonRegresar.png"/></a></p>
         </FONT>
