--- a/nomegusta.html
+++ b/nomegusta.html
@@ -15,26 +15,26 @@
     <p>Odio a las personas que son irresponsables y odio mucho que me hagan esperar</p>
      <br>
     <img src="./img/gustos34.jpg"/>
-    <p>No me gusta conocer a personas hipócritas, y si soy amigo de una trato de tener límites de mi confianza con esas personas.</p>No me gusta conocer a personas hipócritas, y si soy amigo de una trato de tener límites de mi confianza con esas personas.
+    <p>No me gusta conocer a personas hip&oacute;critas, y si soy amigo de una trato de tener l&iacute;mites de mi confianza con esas personas.No me gusta conocer a personas hip&oacute;critas, y si soy amigo de una trato de tener l&iacute;mites de mi confianza con esas personas.</p>
    <br>
     <img src="./img/gustos32.jpg"/><img src="./img/gustos35.jpg"/>
-    <p>Me cae mal las personas que se ahogan en un vaso de agua por sus problemas insignificantes, a esas personas que se hacen las víctimas y que creen que el mundo les debe algo, habiendo personas que si pasan en verdad por un mal momento como la pérdida de un ser querido, o una grave enfermedad, y estas personas creando escenas de depresión para llamar la atención, las odio. También incluye a esas personas que se son muy quejumbrosas de todo a su alrededor y no eso no les permite valorar lo que tienen y estar agradecidos.</p>
+    <p>Me cae mal las personas que se ahogan en un vaso de agua por sus problemas insignificantes, a esas personas que se hacen las v&iacute;ctimas y que creen que el mundo les debe algo, habiendo personas que si pasan en verdad por un mal momento como la p&eacute;rdida de un ser querido, o una grave enfermedad, y estas personas creando escenas de depresi&oacute;n para llamar la atenci&oacute;n, las odio. Tambi&eacute;n incluye a esas personas que se son muy quejumbrosas de todo a su alrededor y no eso no les permite valorar lo que tienen y estar agradecidos.</p>
      <br>
     <img src="./img/gustos33.jpg"/>
-    <p>Odio las personas de mente cerrada, que viven en los siglos pasados, que son tan racistas, tan discriminantes, homofóbicas, gente posesiva, gente que no se adapta a la era en la que estamos ahora, en la que todos somos iguales, y tenemos los mismos derechos, esas personas que les gusta dar la contraria que son tan infelices que no quieren ver a otras personas felices.</p>
+    <p>Odio las personas de mente cerrada, que viven en los siglos pasados, que son tan racistas, tan discriminantes, homof&oacute;bicas, gente posesiva, gente que no se adapta a la era en la que estamos ahora, en la que todos somos iguales, y tenemos los mismos derechos, esas personas que les gusta dar la contraria que son tan infelices que no quieren ver a otras personas felices.</p>
     <br>
     <img src="./img/gustos36.jpg"/>
-    <p>No me gusta el sistema de seguridad que hay en mi país, donde sea hay corrupción y abusos por parte de las autoridades.</p>
-    No me gusta el sistema de seguridad que hay en mi país, donde sea hay corrupción y abusos por parte de las autoridades.
+    <p>No me gusta el sistema de seguridad que hay en mi pa&iacute;s, donde sea hay corrupci&oacute;n y abusos por parte de las autoridades.
+        No me gusta el sistema de seguridad que hay en mi pa&iacute;s, donde sea hay corrupci&oacute;n y abusos por parte de las autoridades.</p>
      <br>
     <img src="./img/gustos37.jpeg"/>
     <p>No me gusta comer caldos de verduras.</p>  
      <br>
     <img src="./img/gustos38.jpg"/>
-    <p>No me gusta escuchar la música de corridos y la banda, y toda esa música que le habla de lo bueno que es ser infiel a tu pareja, que hablan de las mujeres como objetos, que un hombre vale más por los bienes materiales que tiene como los carros de lujo, el alcohol que bebe, las mansiones, y toda esa música que les da más fama a los narcotraficantes, alentando a aquellos que las escuchan que así deben de ser.</p>
+    <p>No me gusta escuchar la m&uacute;sica de corridos y la banda, y toda esa m&uacute;sica que le habla de lo bueno que es ser infiel a tu pareja, que hablan de las mujeres como objetos, que un hombre vale m&aacute;s por los bienes materiales que tiene como los carros de lujo, el alcohol que bebe, las mansiones, y toda esa m&uacute;sica que les da m&aacute;s fama a los narcotraficantes, alentando a aquellos que las escuchan que as&iacute; deben de ser.</p>
     <br>
     <img src="./img/gustos39.jpg"/>
-    <p>No me gusta tener el cabello largo, me crece un poco y para mí ya lo tengo bastante largo y me lo quiero cortar mientras los demás me dicen que si lo tengo corto, pero yo me siento incómodo.
+    <p>No me gusta tener el cabello largo, me crece un poco y para m&iacute; ya lo tengo bastante largo y me lo quiero cortar mientras los dem&aacute;s me dicen que si lo tengo corto, pero yo me siento inc&oacute;modo.
 
 </p>
     
@@ -44,4 +44,3 @@
         </FONT>
        </body>
 </html>
- 
