--- a/partieron.html
+++ b/partieron.html
@@ -9,17 +9,17 @@
        
        <div align=center><img src="./img/luto.jpg"/>
             <h1><p>Familiares que ya partieron</p></h1>
-            <h2><p>DESCANCE EN PAZ</p></h2>
+            <h2><p>DESCANSE EN PAZ</p></h2>
            <p><img src="./img/familia21.jpg"/></p>
-            <h4><p>Leovigildo Guevara Fonseca</p></h4>
+            <h4><p>Leovigildo Guevara Fonseca(Abuelo)</p></h4>
            <p><img src="./img/familia10.jpg"/></p>
-            <h4><p>Sirenia Fonseca</p></h4>
+            <h4><p>Sirenia Fonseca Real(Bisabuela)</p></h4>
            <p><img src="./img/familia22.jpg"/></p>
-            <h4><p>Christian Guevara Cañedo</p></h4>
+            <h4><p>Christian Guevara Cañedo(Tio)</p></h4>
            <p><img src="./img/familia14.jpg"/></p>
-            <h4><p>Consuelo Gonzalez Juarez</p></h4>
+            <h4><p>Consuelo Gonzalez Juarez(Abuela)</p></h4>
            <p><img src="./img/familia13.jpg"/></p>
-            <h4><p>José Luis Sánchez Gutierrez</p></h4>
+            <h4><p>Jos&eacute; Luis S&aacute;nchez Gutierrez(Abuelo)</p></h4>
        </div>
           <p><a href="./familia.html"><img src="./img/botonRegresar.png"/></a></p>
         </FONT>
