Se cambiaron caracteres
Se usaron entities

--- a/paterna.html
+++ b/paterna.html
@@ -8,12 +8,14 @@
        </div>
        <div align=center><h1>Familia Paterna</h1>
            <p><img src="./img/familia4.jpg" border="4 "alt="Imagen de mi familia paterna cuando fuimos a Nayarit de vacaciones"/></p>
-           <p>Fotografía de mi familia paterna cuando fuimos de vacaciones Nayarit y a celebrar la fiesta de mi abuela por sus 65 años de vida. Fue un día muy especial y divertido. Aparecen mi familia, algunos hermanos de mi papa y su familia, y gran cantidad de familia de la hermana de mi abuela que viven en Ciudad Obregón.</p>
+           <p>Fotograf&iacute;a de mi familia paterna cuando fuimos de vacaciones Nayarit y a celebrar la fiesta de mi abuela por sus 65 a&ntilde;os de vida. Fue un d&iacute;a muy especial y divertido. Aparecen mi familia, algunos hermanos de mi papa y su familia, y gran cantidad de familia de la hermana de mi abuela que viven en Ciudad Obreg&oacute;n.</p>
+           <p>Mi padre tiene 5 hermanos, Ricardo, Christian, Joel, Agustina, y Mariano, sus padres Bertha y Leovigildo</p>
            <br><br>
-           <p><img src="./img/familia5.jpg" alt="Fotografia muy vieja de la familia de mi papa, sus padres, su abuela, y sus hermanos"/></p>
-           <p>Fotografía muy vieja de la familia de mi padre, sus padres Leovigildo y Bertha, su abuela Sirenia, y sus hermanos, falta el hermano más chico Christian en la foto. Mi padre es el hijo mayor de todos los hermanos.</p>
+           <p><img src="./img/familia17.png" alt="Fotografia familiar"/></p>
+           <p>         
+           Ultima fotografia familiar donde aparece mi padre con su mama y algunos de sus hermanos Joel, Agustina, y Mariano.Mi padre es el mayor de todos los hermanos. </p>
            <br><br>
-           <p>Actualmente todos los hermanos de mi papa tienen su familia, Mariano, Joel y Agustina viven en Los Mochis, Ricardo vive en Culiacán, somos una familia muy grande. </p>
+           <p>Actualmente todos los hermanos de mi papa tienen su familia, Mariano, Joel y Agustina viven en Los Mochis, Ricardo vive en Culiac&aacute;n, somos una familia  </p>
        </div>
         <p><a href="./familia.html"><img src="./img/botonRegresar.png"/></a></p>
         </FONT>
