--- a/planesFuturo.html
+++ b/planesFuturo.html
@@ -9,19 +9,19 @@
        <div align=center>
            <br>
            <img src="./img/futuro4.PNG"/>
-           <p>Quiero egresar de la universidad y seguir superándome estudiando alguna maestría o haciendo una investigación. </p>
+           <p>Quiero egresar de la universidad y seguir super&aacute;ndome estudiando alguna maestr&iacute;a o haciendo una investigaci&oacute;n. </p>
             <br>
            <img src="./img/futuro6.jpg"/>
-           <p>Quiero que cuando sea más adulto dedicarle tiempo a mi cuerpo y a mi salud para tener un buen físico y gozar de excelente salud. Además eso también me ayuda en la salud mental, quisiera tener un cuerpo fitness.</p>
+           <p>Quiero que cuando sea m&aacute;s adulto dedicarle tiempo a mi cuerpo y a mi salud para tener un buen f&iacute;sico y gozar de excelente salud. Adem&aacute;s eso tambi&eacute;n me ayuda en la salud mental, quisiera tener un cuerpo fitness.</p>
             <br>
            <img src="./img/futuro3.jpg"/>
-           <p>Planea tatuarme muchas cosas, quizás la mayoría de mis futuros tatuajes sean pequeños, no sé, por el momento no tengo ninguno por respeto a mis padres, pero es un hecho que lo hare, estoy seguro. </p>
+           <p>Planea tatuarme muchas cosas, quiz&aacute;s la mayor&iacute;a de mis futuros tatuajes sean peque&ntilde;os, no s&eacute;, por el momento no tengo ninguno por respeto a mis padres, pero es un hecho que lo hare, estoy seguro. </p>
             <br>
            <img src="./img/futuro1.jpg"/>
-           <p>Planeo ir a un concierto de Rihanna  o algún otro artista que admire y conocerlo.</p>
+           <p>Planeo ir a un concierto de Rihanna  o alg&uacute;n otro artista que admire y conocerlo.</p>
             <br>
            <img src="./img/futuro2.jpg"/>
-           <p>Planeo ser un profesionalista exitoso, maduro, responsable, que me valla muy bien en lo económico para que no me falte nada a mí y a mi familia, ser el orgullo de toda mi familia, y poder comprarme los lujos que siempre quise, como camionetas de lujo, una casa enorme con alberca, y tener muchas mascotas, viajar por el mundo pero también poder seguir siendo aquella persona divertida y humilde que a todo le saca un lado positivo a las cosa.</p>
+           <p>Planeo ser un profesionalista exitoso, maduro, responsable, que me valla muy bien en lo econ&oacute;mico para que no me falte nada a m&iacute; y a mi familia, ser el orgullo de toda mi familia, y poder comprarme los lujos que siempre quise, como camionetas de lujo, una casa enorme con alberca, y tener muchas mascotas, viajar por el mundo pero tambi&eacute;n poder seguir siendo aquella persona divertida y humilde que a todo le saca un lado positivo a las cosa.</p>
        </div>
        
       <p><a href="./menu.html"><img src="./img/botonRegresar.png"/></a></p>
