--- a/telefono.html
+++ b/telefono.html
@@ -1,17 +1,17 @@
-
 <html>
 <head><title>Bienvenido a mi vida</title><link rel="icon" type="miniIcono.png" href="./img/miniIcono.png" /></head>
-     <body><div>
+     <body><FONT FACE="arial"><div>
       <a href="./menu.html"><img src="./img/logo.png" /></a>
        <a href="./redesSociales.html"><img src="./img/panelRedesSociales.png" /></a>
        <a href="./ubicacion.html"><img src="./img/panelUbicacion.png" /></a>
        <a href="./telefono.html"><img src="./img/panelTelefono.png" /></a>
        </div>
      
-     
-       <h2>Celular:</h2>
-       <h1>66-81-85-71-24</h1>
-       <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+       <p><img src="./img/whatsapp.png"/></p>
+         <h2><p>Celular:</p></h2>
+       <h1>66-81-84-70-25</h1>
+       <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
        <p><a href="./menu.html"><img src="./img/botonRegresar.png"/></a></p>
+         </FONT>
        </body>
 </html>
