Correccion en contenido de texto
Se corrigió un parrafo incompleto

--- a/salud.html
+++ b/salud.html
@@ -16,7 +16,7 @@
            <img src="./img/salud2.jpg"/><img src="./img/salud3.jpg"/>
            <p>Mi sonrisa antes de los brackets y despues de 2 meses teniendo brackets</p>
            <p><img src="./img/adolescencia.jpg"/></p>
-           <p>Foto usando los brackets 2 y 6 meses</p>
+           <p>Foto usando los brackets 2 años y 6 meses</p>
        </div>
       <p><a href="./menu.html"><img src="./img/botonRegresar.png"/></a></p>
         </FONT>
