Corrección en dos párrafos de texto
Se elimino los párrafos repetidos que tenia

--- a/nomegusta.html
+++ b/nomegusta.html
@@ -15,7 +15,7 @@
     <p>Odio a las personas que son irresponsables y odio mucho que me hagan esperar</p>
      <br>
     <img src="./img/gustos34.jpg"/>
-    <p>No me gusta conocer a personas hip&oacute;critas, y si soy amigo de una trato de tener l&iacute;mites de mi confianza con esas personas.No me gusta conocer a personas hip&oacute;critas, y si soy amigo de una trato de tener l&iacute;mites de mi confianza con esas personas.</p>
+    <p>No me gusta conocer a personas hip&oacute;critas, y si soy amigo de una trato de tener l&iacute;mites de mi confianza con esas personas.</p>
    <br>
     <img src="./img/gustos32.jpg"/><img src="./img/gustos35.jpg"/>
     <p>Me cae mal las personas que se ahogan en un vaso de agua por sus problemas insignificantes, a esas personas que se hacen las v&iacute;ctimas y que creen que el mundo les debe algo, habiendo personas que si pasan en verdad por un mal momento como la p&eacute;rdida de un ser querido, o una grave enfermedad, y estas personas creando escenas de depresi&oacute;n para llamar la atenci&oacute;n, las odio. Tambi&eacute;n incluye a esas personas que se son muy quejumbrosas de todo a su alrededor y no eso no les permite valorar lo que tienen y estar agradecidos.</p>
@@ -24,8 +24,7 @@
     <p>Odio las personas de mente cerrada, que viven en los siglos pasados, que son tan racistas, tan discriminantes, homof&oacute;bicas, gente posesiva, gente que no se adapta a la era en la que estamos ahora, en la que todos somos iguales, y tenemos los mismos derechos, esas personas que les gusta dar la contraria que son tan infelices que no quieren ver a otras personas felices.</p>
     <br>
     <img src="./img/gustos36.jpg"/>
-    <p>No me gusta el sistema de seguridad que hay en mi pa&iacute;s, donde sea hay corrupci&oacute;n y abusos por parte de las autoridades.
-        No me gusta el sistema de seguridad que hay en mi pa&iacute;s, donde sea hay corrupci&oacute;n y abusos por parte de las autoridades.</p>
+    <p>No me gusta el sistema de seguridad que hay en mi pa&iacute;s, donde sea hay corrupci&oacute;n y abusos por parte de las autoridades.</p>
      <br>
     <img src="./img/gustos37.jpeg"/>
     <p>No me gusta comer caldos de verduras.</p>  
